widget-factory/applier/templates/route.yml
apiVersion: v1
kind: Route
metadata:
  name: widget-factory
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: widget-factory
